--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-  <header class="masthead">
+  <header class="masthead" role="banner">
     <h1>
       <img src="images/logo.svg" alt="Anchor Logo">
       <span>Arrrgene’s Treasure Tours</span>
@@ -34,18 +34,18 @@
       </div>
     </div>
 
-    <div class="ship">
-      <div class="card">
+    <section class="ship">
+      <article class="card">
         <img src="images/ship.svg" alt="Ship">
         <h2>Heave Ho!</h2>
         <p>Weigh anchor and hoist the mizzen, ya old salt, aboard shipshape <i>Arrrgonaut</i>.</p>
         <a href="#">See the specs</a>
-      </div>
-    </div>
+      </article>
+    </section>
 
   </main>
 
-  <footer class="footer">
+  <footer class="footer" role="contentinfo">
     <p>© Arrrgene’s Treasure Tours</p>
   </footer>
 
